[project]
name = "omniscient-llm"
version = "0.1.0"
description = "OmniscientLLM — 200M parameter conversational coding chat agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tokenizers>=0.20",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.22",
]
train = [
    "mlx>=0.22",
    "datasets>=3.0",
    "wandb>=0.18",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["model*", "tokenizer*", "data*", "training*", "server*", "evals*"]
exclude = ["extension*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
